# easymutate

./: .gitignore  .mutmut-cache  pyproject.toml  report.html  session.sqlite
easymutate/: __main__.py  setup.py
easymutate/mutators/: __init__.py  math_mutator.py  mutator.py
tests/: test_math.py
